--- a/templates/admin/admins.html
+++ b/templates/admin/admins.html
@@ -54,7 +54,7 @@
 
             <!-- Table Container -->
             <div class="table-container" style="display: none">
-                <table class="admin-table">
+                <table>
                     <thead>
                         <tr>
                             <th>ID</th>
