--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -181,7 +181,7 @@
                 <a href="/admin/admins" class="nav-card">
                     <h3>
                         <img
-                            src="/static/icons/person.badge.shield.svg"
+                            src="/static/icons/person.badge.shield.checkmark.svg"
                             class="icon"
                             alt="Admin Management"
                         />
