fix table, add ability to create fake users

--- a/static/styles/admin/table.css
+++ b/static/styles/admin/table.css
@@ -3,6 +3,7 @@
 .table-container {
     width: 100%;
     margin: 0;
+    padding-top: 14px; /* Add padding to account for fixed search bar */
 }
 
 table {
